@@ -1,3 +1,6 @@
+2018-09-24 Carlos Alberto Enciso
+    * command_options.c: Add missing desriptions in the usage message for
+      -EI, -Em and -kw.
 2018-09-20 Carlos Alberto Enciso
     * command_options.c: Move the code associated with each
       sub-option, to an individual function. Preliminary work for
